envoy_servicemesh/platform/istio/service_a_b_c_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-a-b-c-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a-b-c
spec:
  hosts:
  - "*"
  gateways:
  - service-a-b-c-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: service-a
        port:
          number: 8081
